Fixes IE glitches. Removes text wrap and white space from form buttons.

--- a/assets/css/_sass/contact.scss
+++ b/assets/css/_sass/contact.scss
@@ -89,6 +89,7 @@ label {
         h2 {
             margin: 0px !important;
             color: #fff !important;
+            white-space: nowrap;
         }
         -webkit-transition: all .5s ease-in-out;
         transition: all .5s ease-in-out;
