--- a/assets/css/_sass/desktop.scss
+++ b/assets/css/_sass/desktop.scss
@@ -42,7 +42,6 @@
     }
 
     .content {
-        width: 85vw;
         max-width: 900px;
         height: 100%;
     }
@@ -59,8 +58,19 @@
             position: absolute;
         }
     }
+
+    .parallax-pricing {
+        &:before {
+            background-attachment: scroll;
+            position: fixed;
+        }
+    }
+
     .parallax-pricing-second {
         overflow-x: hidden;
+        &:before {
+            position: fixed;
+        }
     }
     .parallax-block {
         background-color: #eee;
